# maktaba

./: .env.example  .gitignore  AGENTS.md  Caddyfile  Caddyfile.home  DEPLOY.md  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
.context/: complaints-log.md
.context/memory/: context-map.md  index.md  system.md
.context/reviews/: remembered.md  review-20260424-171509.md  review-20260424-204758.md  review-20260424-205443.md  review-20260424-210450.md  review-20260425-011052.md  review-20260425-021757.md  review-20260425-031834.md  review-20260425-032041.md  review-20260425-051107.md  review-20260425-185611.md  review-20260425-191437.md  review-20260427-091600.md  review-20260427-200715.md  review-20260427-201845.md  review-20260427-203534.md  review-20260428-173926.md  review-20260428-180342.md  review-20260428-184437.md  review-20260428-210149.md  review-20260429-022103.md  review-20260429-023249.md  review-20260502-202722.md  review-20260502-202742.md  review-20260502-214059.md  review-20260502-214922.md  review-20260503-024246.md  review-20260503-191016.md  review-20260503-191224.md  review-20260504-031945.md  (+1 more)
backend/: Dockerfile  INTEGRATION.md  README.md  pyproject.toml
backend/app/: db.py  extract.py  main.py  models.py  paths.py  uploads.py  worker.py
backend/tests/: test_document_upload.py  test_extract_worker.py  test_health.py  test_schema_smoke.py
frontend/: Dockerfile  package-lock.json  package.json  postcss.config.cjs  tailwind.config.cjs  vite.config.ts
scripts/: run-integration-tests.sh
(+54 files in other folders)
